RESOLVED FIXED87848
[EFL][DRT] http/tests/navigation/new-window-redirect-history.html does not pass
https://bugs.webkit.org/show_bug.cgi?id=87848
Summary [EFL][DRT] http/tests/navigation/new-window-redirect-history.html does not pass
Mikhail Pozdnyakov
Reported 2012-05-30 06:35:38 PDT
http/tests/navigation/new-window-redirect-history.html does not pass on EFL port.
Attachments
Fix. (3.36 KB, patch)
2012-05-30 06:51 PDT, Mikhail Pozdnyakov
no flags
Mikhail Pozdnyakov
Comment 1 2012-05-30 06:51:06 PDT
Raphael Kubo da Costa (:rakuco)
Comment 2 2012-05-30 07:08:14 PDT
Comment on attachment 144799 [details] Fix. Ouch! Thanks for the catch, LGTM.
Csaba Osztrogonác
Comment 3 2012-05-30 09:00:36 PDT
Comment on attachment 144799 [details] Fix. rs=me
WebKit Review Bot
Comment 4 2012-05-30 10:17:30 PDT
Comment on attachment 144799 [details] Fix. Clearing flags on attachment: 144799 Committed r118933: <http://trac.webkit.org/changeset/118933>
WebKit Review Bot
Comment 5 2012-05-30 10:17:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.