[EFL][DRT] http/tests/navigation/new-window-redirect-history.html does not pass https://bugs.webkit.org/show_bug.cgi?id=87848

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-05-30
Reviewed by Csaba Osztrogonác.

Tools:

The reason was that DumpRenderTreeChrome::extraViews() returned copy of the vector
and dumpBackForwardListForWebViews() used iterators belonging actually to different vectors
(browser->extraViews().begin() and browser->extraViews().end()) as if they had belonged to the same vector.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::extraViews):
* DumpRenderTree/efl/DumpRenderTreeChrome.h:
(DumpRenderTreeChrome):

LayoutTests:

* platform/efl/Skipped: Unskipped http/tests/navigation/new-window-redirect-history.html.

Canonical link: https://commits.webkit.org/105657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118933 268f45cc-cd09-0410-ab3c-d52691b4dbfc